--- a/no_preprocessing.ipynb
+++ b/no_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "4    15766172       Chiemenam          716     Spain   Male 33.00       5      0.00              2       1.00            1.00         15068.83       0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,22 +420,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Program Files\\Anaconda\\Lib\\site-packages\\sklearn\\svm\\_classes.py:32: FutureWarning: The default value of `dual` will change from `True` to `'auto'` in 1.5. Set the value of `dual` explicitly to suppress the warning.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Program Files\\Anaconda\\Lib\\site-packages\\sklearn\\svm\\_base.py:1242: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "c:\\Program Files\\Anaconda\\Lib\\site-packages\\sklearn\\base.py:439: UserWarning: X does not have valid feature names, but LogisticRegression was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "c:\\Program Files\\Anaconda\\Lib\\site-packages\\sklearn\\svm\\_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n",
+      "c:\\Program Files\\Anaconda\\Lib\\site-packages\\sklearn\\base.py:439: UserWarning: X does not have valid feature names, but LinearSVC was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "c:\\Program Files\\Anaconda\\Lib\\site-packages\\sklearn\\base.py:439: UserWarning: X does not have valid feature names, but DecisionTreeClassifier was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "c:\\Program Files\\Anaconda\\Lib\\site-packages\\sklearn\\base.py:439: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "c:\\Program Files\\Anaconda\\Lib\\site-packages\\sklearn\\base.py:439: UserWarning: X does not have valid feature names, but GaussianNB was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "c:\\Program Files\\Anaconda\\Lib\\site-packages\\sklearn\\base.py:439: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     },
@@ -477,14 +481,14 @@
        "    <tr>\n",
        "      <th>Support Vector Machines</th>\n",
        "      <td>0.76</td>\n",
-       "      <td>0.36</td>\n",
-       "      <td>0.15</td>\n",
-       "      <td>0.21</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Decision Trees</th>\n",
        "      <td>0.80</td>\n",
-       "      <td>0.51</td>\n",
+       "      <td>0.52</td>\n",
        "      <td>0.54</td>\n",
        "      <td>0.53</td>\n",
        "    </tr>\n",
@@ -493,7 +497,7 @@
        "      <td>0.86</td>\n",
        "      <td>0.72</td>\n",
        "      <td>0.54</td>\n",
-       "      <td>0.62</td>\n",
+       "      <td>0.61</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Naive Bayes</th>\n",
@@ -516,14 +520,14 @@
       "text/plain": [
        "                         Accuracy  Precision  Recall  F1 Score\n",
        "Logistic Regression          0.79       0.49    0.12      0.20\n",
-       "Support Vector Machines      0.76       0.36    0.15      0.21\n",
-       "Decision Trees               0.80       0.51    0.54      0.53\n",
-       "Random Forest                0.86       0.72    0.54      0.62\n",
+       "Support Vector Machines      0.76       0.38    0.20      0.26\n",
+       "Decision Trees               0.80       0.52    0.54      0.53\n",
+       "Random Forest                0.86       0.72    0.54      0.61\n",
        "Naive Bayes                  0.79       0.53    0.19      0.28\n",
        "K-Nearest Neighbor           0.76       0.31    0.12      0.17"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
