--- a/bank_churn.ipynb
+++ b/bank_churn.ipynb
@@ -17,7 +17,7 @@
     "import numpy as np \n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.neighbors import LocalOutlierFactor\n",
     "from __init__ import *\n",
     "\n",
