--- a/no_preprocessing.ipynb
+++ b/no_preprocessing.ipynb
@@ -541,9 +541,9 @@
    "metadata": {},
    "source": [
     "Reminder:\n",
-    "* Accuracy: Doğru olarak sınıflandırılan örneklerin, tüm örnekleme oranıdır.\n",
-    "* Precision: Gerçekte de pozitif olan tahminlerin, tüm pozitif tahminlere oranıdır.\n",
-    "* Recall: Pozitif olarak tahmin ettiğimiz değerlerin gerçekte de ne kadarının pozitif olduğunu gösterir."
+    "* Accuracy: It is the ratio of the entire sample that is correctly classified.\n",
+    "* Precision: It is the ratio of actually positive predictions to all positive predictions.\n",
+    "* Recall: It shows how much of the values we estimate as positive are actually positive."
    ]
   }
  ],
