--- a/bank_churn.ipynb
+++ b/bank_churn.ipynb
@@ -1519,6 +1519,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.drop([\"CustomerId\", \"Surname\"], axis = 1, inplace=True)\n",
+    "test.drop([\"CustomerId\", \"Surname\"], axis = 1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [
@@ -1548,16 +1558,6 @@
     "sns.heatmap(corr_matrix.sort_values(by='Exited', ascending=False), annot=True, fmt='.2f')\n",
     "plt.title('Correlation Matrix')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.drop([\"CustomerId\", \"Surname\"], axis = 1, inplace=True)\n",
-    "test.drop([\"CustomerId\", \"Surname\"], axis = 1, inplace=True)"
    ]
   },
   {
@@ -1636,8 +1636,7 @@
     "lof = LocalOutlierFactor()\n",
     "lof.fit_predict(data)\n",
     "data_scores = lof.negative_outlier_factor_\n",
-    "np.sort(data_scores)[0:50]\n",
-    "    "
+    "np.sort(data_scores)[0:50]   "
    ]
   },
   {
